--- a/Form.html
+++ b/Form.html
@@ -4,18 +4,18 @@
     <a href="./CV.html"><h3>GO TO CV</h3></a>
     <h2>User Form</h2>
         <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name" required><br><br>
+        <input type="text" id="name" name="name" placeholder="Your Name" required><br><br>
 
         <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password" required maxlength="8"><br><br>
+        <input type="password" id="password" name="password" required maxlength="8" placeholder="********"><br><br>
 
         <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" required><br><br>
+        <input type="email" id="email" name="email" placeholder="abc@xyz.com" required><br><br>
 
         <label for="dob">Date of Birth:</label><br>
         <input type="date" id="dob" name="dob" required><br><br>
 
-        <label for="address">Address:</label><br>
+        <label for="address" >Address:</label><br>
         <textarea id="address" name="address" rows="4" cols="50" required></textarea><br><br>
             <label for="City">City</label><br/>
             <select name="City" id="City" required>
